--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "swr": "^2.2.5",
     "terser-webpack-plugin": "^5.3.10"
   },
   "devDependencies": {
