--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/swc-win32-x64-msvc": "^15.1.0",
     "axios": "^1.7.9",
     "cookie": "^1.0.2",
+    "country-state-city": "^3.2.1",
     "js-cookie": "^3.0.5",
     "next": "15.1.0",
     "next-auth": "^4.24.11",
