--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "axios": "^1.7.9",
     "cookie": "^1.0.2",
     "country-state-city": "^3.2.1",
+    "framer-motion": "^11.14.4",
     "js-cookie": "^3.0.5",
     "next": "15.1.0",
     "next-auth": "^4.24.11",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-cookie": "^7.2.2",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "swr": "^2.2.5",
