--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
     "terser-webpack-plugin": "^5.3.10"
   },
